--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
 language: python
+addons:
+  firefox: "60.0.2"
 python:
   - "2.7"
   - "3.5"
   - "3.6"
   - "3.7-dev"
+before_install:
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.22.0/geckodriver-v0.22.0-linux64.tar.gz
+  - mkdir geckodriver
+  - tar -xzf geckodriver-v0.22.0-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/geckodriver
+install:
+  - pip install -r requirements.txt
 script:
   - pytest
