--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_install:
   - tar -xzf geckodriver-v0.21.0-linux64.tar.gz -C geckodriver
   - export PATH=$PATH:$PWD/geckodriver
   - export DISPLAY=127.0.0.1:99
+  - python manage.py runserver
+  - sleep 3
 install:
   - pip install -r requirements.txt
 script:
