--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,5 @@ before_script:
   - python manage.py runserver &
   - sleep 3
 script:
-  - pwd
-  - ls
-  - ls tests/
-  - pytest --disable-warnings
-  - cat pytestdebug.log
+  - pytest
 
